# corporation_slayer

./: Cargo.toml  LICENSE
.github/workflows/: release.yml
assets/models/: cube_test.glb
export_html/: index.html
src/: commands.rs  common.rs  main.rs  screen.rs  world.rs
src/screen/: commands.rs  draw.rs  gui.rs  models.rs
src/world/: obstacles.rs
