[package]
name = "corporation_slayer"
version = "0.1.0"
edition = "2021"
default-run = "corporation_slayer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "=0.3.25"
quad-rand = "=0.2.1"
git-version = "=0.3.5"
clap = { version = "=3.2.23", features = ["derive"] }
gltf = "1.1.0"
